--- a/www/templates/profileProduct.html
+++ b/www/templates/profileProduct.html
@@ -5,12 +5,12 @@
       <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
     </div>
     <div id="profileProduct-markdown7" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">Description Product</p>
+      <p style="color:#000000;">Product Description</p>
     </div>
-    <div id="profileProduct-button-bar2" class="button-bar">
-      <a ui-sref="tabsController.leafletMedication()" id="profileProduct-button14" style="font-weight:lighter;" class="button button-balanced button-block icon-left ion-leaf">Leaflet</a>
-      <button id="profileProduct-button15" class="button button-calm button-block icon-left ion-ios-cart">Add to Cart</button>
+    <div  class="button-bar">
+      <a ui-sref="tabsController.leafletMedication()" style="font-weight:lighter;" class="button button-balanced icon-left ion-leaf">Leaflet</a>
+      <button  class="button button-calm icon-left ion-ios-cart" ui-sref="cart">Add to Cart</button>
     </div>
-    <button id="profileProduct-button17" class="button button-positive button-block icon-left ion-card">Buy Now</button>
+    <button  class="button button-positive button-block icon-left ion-card" ui-sref="cart">Buy Now</button>
   </ion-content>
 </ion-view>
