--- a/www/templates/drugstore.html
+++ b/www/templates/drugstore.html
@@ -1,21 +1,49 @@
 <ion-view title="Drugstore" id="page2">
-  <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-android-cart"></button>
-  </ion-nav-buttons>
-  <ion-content padding="true" class="has-header" style="background: url('../img/G2.png')">
-    <ion-list id="drugstore-list1">
-      <label class="item item-input" id="drugstore-search4">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="search" placeholder="">
-      </label>
-      <ion-item class="item-thumbnail-left" id="drugstore-list-item1" ui-sref="tabsController.products()">
-        <h2>Item</h2>
-        <p>2 km</p>
-      </ion-item>
-      <ion-item class="item-thumbnail-left" id="drugstore-list-item12" ui-sref="tabsController.products()">
-        <h2>Item</h2>
-        <p>5 km</p>
-      </ion-item>
-    </ion-list>
-  </ion-content>
+    <ion-nav-buttons side="right" class="has-header">
+        <div class="buttons buttons-right header-item">
+                    <span class="right-buttons">
+                        <button class="button button-calm button-fab" ui-sref="cart">
+                            <i class="ion-android-cart"></i>
+                        </button>
+                    </span>
+        </div>
+    </ion-nav-buttons>
+    <ion-content padding="true" class="has-header" style="background: url('../img/G2.png')">
+
+        <label class="item item-input" id="drugstore-search4">
+            <i class="icon ion-search placeholder-icon"></i>
+            <input type="search" placeholder="Search">
+        </label>
+
+        <div class="list card stable-bg" ui-sref="tabsController.products()">
+            <div class="item item-avatar">
+                <img src="../img/material1.jpg"></img>
+                <h2>Item 1</h2>
+                <p>5 km</p>
+            </div>
+        </div>
+
+        <div class="list card stable-bg" ui-sref="tabsController.products()">
+            <div class="item item-avatar">
+                <img src="../img/material1.jpg"></img>
+                <h2>Item 2</h2>
+                <p>10 km</p>
+            </div>
+        </div>
+        <div class="list card stable-bg" ui-sref="tabsController.products()">
+            <div class="item item-avatar">
+                <img src="../img/material1.jpg"></img>
+                <h2>Item 3</h2>
+                <p>3,5 km</p>
+            </div>
+        </div>
+
+        <div class="list card stable-bg" ui-sref="tabsController.products()">
+            <div class="item item-avatar">
+                <img src="../img/material1.jpg"></img>
+                <h2>Item 4</h2>
+                <p>2 km</p>
+            </div>
+        </div>
+    </ion-content>
 </ion-view>
