--- a/www/templates/leafletMedication.html
+++ b/www/templates/leafletMedication.html
@@ -1,28 +1,44 @@
 <ion-view title="Leaflet Medication" id="page7">
-  <ion-content padding="true" class="has-header">
-    <form id="leafletMedication-form3" class="list">
-      <label class="item item-input" id="leafletMedication-search1">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="search" placeholder="">
-      </label>
-      <ion-item class="item-avatar calm" id="leafletMedication-list-item9">
-        <h2calm>Item</h2calm>
-      </ion-item>
-      <ion-item class="item-avatar calm" id="leafletMedication-list-item28">
-        <h2calm>Item</h2calm>
-      </ion-item>
-      <ion-item class="item-avatar calm" id="leafletMedication-list-item29">
-        <h2calm>Item</h2calm>
-      </ion-item>
-      <ion-item class="item-avatar calm" id="leafletMedication-list-item30">
-        <h2calm>Item</h2calm>
-      </ion-item>
-      <ion-item class="item-avatar calm" id="leafletMedication-list-item31">
-        <h2calm>Item</h2calm>
-      </ion-item>
-      <ion-item class="item-avatar calm" id="leafletMedication-list-item32">
-        <h2calm>Item</h2calm>
-      </ion-item>
-    </form>
-  </ion-content>
+    <ion-content padding="true" class="has-header" style="background: url('../img/G2.png')">
+        <form id="leafletMedication-form3" class="list">
+            <label class="item item-input" id="leafletMedication-search1">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="">
+            </label>
+        </form>
+        <div class="card">
+            <ion-list>
+                <ion-item class="item-avatar calm">
+                    <img src="../img/material1.jpg">
+                    <h2calm>Item</h2calm>
+                    <h3>Description</h3>
+                </ion-item>
+                <ion-item class="item-avatar calm" >
+                    <img src="../img/material1.jpg">
+                    <h2calm>Item</h2calm>
+                    <h3>Description</h3>
+                </ion-item>
+                <ion-item class="item-avatar calm">
+                    <img src="../img/material1.jpg"></img>
+                    <h2calm>Item</h2calm>
+                    <h3>Description</h3>
+                </ion-item>
+                <ion-item class="item-avatar calm">
+                    <img src="../img/material1.jpg"></img>
+                    <h2calm>Item</h2calm>
+                    <h3>Description</h3>
+                </ion-item>
+                <ion-item class="item-avatar calm">
+                    <img src="../img/material1.jpg"></img>
+                    <h2calm>Item</h2calm>
+                    <h3>Description</h3>
+                </ion-item>
+                <ion-item class="item-avatar calm">
+                    <img src="../img/material1.jpg"></img>
+                    <h2calm>Item</h2calm>
+                    <h3>Description</h3>
+                </ion-item>
+            </ion-list>
+        </div>
+    </ion-content>
 </ion-view>
