--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,35 +1,46 @@
 <ion-view title="Products" id="page3">
-  <ion-content padding="true" class="has-header">
-    <ion-list id="products-list2">
-      <label class="item item-input" id="products-search3">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="search" placeholder="">
-      </label>
-      <ion-item class="item-thumbnail-left item-icon-right calm" id="products-list-item4" ui-sref="tabsController.profileProduct()">
-        <h2calm>Item
-          <p>Short Descrition</p>
-          <i class="icon ion-android-add-circle"></i>
-        </h2calm>
-      </ion-item>
-      <ion-item class="item-thumbnail-left item-icon-right calm" id="products-list-item16" ui-sref="tabsController.profileProduct()">
-        <h2calm>Item
-          <p>Short Descrition</p>
-          <i class="icon ion-android-add-circle"></i>
-        </h2calm>
-      </ion-item>
-      <ion-item class="item-thumbnail-left item-icon-right calm" id="products-list-item17" ui-sref="tabsController.profileProduct()">
-        <h2calm>Item
-          <p>Short Descrition</p>
-          <i class="icon ion-android-add-circle"></i>
-        </h2calm>
-      </ion-item>
-      <ion-item class="item-thumbnail-left item-icon-right calm" id="products-list-item18" ui-sref="tabsController.profileProduct()">
-        <h2calm>Item
-          <p>Short Descrition</p>
-          <i class="icon ion-android-add-circle"></i>
-        </h2calm>
-      </ion-item>
-    </ion-list>
-    <button id="products-button24" style="font-weight:lighter;" class="button button-calm button-block">Chat with the establishment</button>
-  </ion-content>
+    <ion-content padding="true" class="has-header" style="background: url('../img/G2.png')">
+
+        <label class="item item-input-inset" id="products-search3">
+            <label class="item-input-wrapper">
+                <i class="icon ion-search placeholder-icon"></i>
+
+                <input class="input-message" type="search" placeholder="Search">
+            </label>
+        </label>
+        <br>
+        <ion-list class="list">
+            <ion-item class="item item-button-right">
+                <h2>Item 1</h2>
+                <p>Short Descrition</p>
+                <button class="button button-calm ink" ui-sref="tabsController.profileProduct()">
+                    <i class="icon ion-android-add-circle"></i>
+                </button>
+            </ion-item>
+            <ion-item class="item item-button-right">
+                <h2>Item 2</h2>
+                <p>Short Descrition</p>
+                <button class="button button-calm ink" ui-sref="tabsController.profileProduct()">
+                    <i class="icon ion-android-add-circle"></i>
+                </button>
+            </ion-item>
+            <ion-item class="item item-button-right">
+                <h2>Item 3</h2>
+                <p>Short Descrition</p>
+                <button class="button button-calm ink" ui-sref="tabsController.profileProduct()">
+                    <i class="icon ion-android-add-circle"></i>
+                </button>
+            </ion-item>
+            <ion-item class="item item-button-right">
+                <h2>Item 4</h2>
+                <p>Short Descrition</p>
+                <button class="button button-calm ink" ui-sref="tabsController.profileProduct()">
+                    <i class="icon ion-android-add-circle"></i>
+                </button>
+            </ion-item>
+        </ion-list>
+        <button id="products-button24" style="font-weight:lighter;" class="button button-calm button-block">Chat with
+            the establishment
+        </button>
+    </ion-content>
 </ion-view>
